syntax = "proto3";

option java_package = "com.huawei.grpc";
option java_multiple_files = true;

message NextWordRequest {
    repeated string word = 1;

}

message NextWordReply {
    repeated string word = 1;
}


service CliService {
    rpc getNextWord(NextWordRequest) returns (NextWordReply);
}
